[package]
name = "boxtrap"
version = "0.1.0"
edition = "2021"

# Enable optimization in the dev profile
[profile.dev]
opt-level = 1

# Enable optimization in the dev profile for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
